<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project2Group1</string>
    <string name="created_by_joseph_ramer_carlos_cupa_jack_bayless_and_joshua_chavez">Created by: Joseph Ramer, Carlos Cupa, Jack Bayless, and Joshua Chavez</string>
    <string name="welcome_to_trivia_go">Welcome to Trivia GO</string>
    <string name="click_here_to_login">Click Here to Login</string>
    <string name="click_here_to_sign_up">Click Here to Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="welcome" tools:ignore="DuplicateDefinition">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="admin_area">Admin Area</string>
    <string name="geography">Geography</string>
    <string name="questiom_1_5">Questiom 1 / 5</string>
    <string name="next_question">Next Question</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="questions_here">Questions here</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_5">Question 1 / 5</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="current_user">Current User:</string>
    <string name="position">Position:</string>
    <string name="total_score">Total Score:</string>
    <string name="exit">Exit</string>
    <string name="welcometotriviago">Welcome to Trivia Go!</string>
    <string name="question">Question:</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="basketball">Basketball</string>
    <string name="name">Name</string>
    <string name="b_ball">B-Ball</string>
    <string name="geo">Geo</string>
    <string name="cs">CS</string>
    <string name="poki">Poki</string>
    <string name="total">Total</string>
    <string name="_1">#1</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="_4">#4</string>
    <string name="_5">#5</string>
</resources>