<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

    <TextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_5"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_0"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questions_here"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/btnAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1"
            android:layout_marginTop="12dp"
            />

        <Button
            android:id="@+id/btnAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btnAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btnAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btnNextQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_question"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>
</ScrollView>